--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
-  "name": "igara-site",
+  "name": "igara-completo",
   "version": "1.0.0",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
-  "dependencies": {},
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
   "devDependencies": {
     "vite": "^4.0.0"
   }
